# llms-from-scratch-practice

./: .gitignore  README.md  pyproject.toml
.claude/: hook-logs.txt  settings.json
.claude/hooks/: README.md  suggest-reflect.sh
notebooks/: Attention mechanism.ipynb  Data_Loader_Input_Output_Pairs.ipynb  LLM_Data_Preprocessing.ipynb  Token_Embeddings.ipynb  Tokenizer.ipynb
