[project]
name = "llms-from-scratch"
version = "0.1.0"
description = "Notebook environment for llms-from-scratch"
requires-python = ">=3.12,<3.13"
dependencies = [
    "ipykernel>=6.29.5",
    "tiktoken>=0.9.0",
    "torch>=2.6,<2.7",
]

[build-system]
requires = ["uv_build>=0.8.5,<0.9.0"]
build-backend = "uv_build"

[tool.uv]
package = false
